--- a/Classes/FirstView.xib
+++ b/Classes/FirstView.xib
@@ -50,7 +50,6 @@
 						<string key="NSFrame">{{42, 255.5}, {684, 513}}</string>
 						<reference key="NSSuperview" ref="114896160"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<int key="IBUIContentMode">1</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -67,6 +66,10 @@
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="915365042"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSColor" key="IBUITintColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAwIDAAA</bytes>
+						</object>
 						<object class="NSArray" key="IBUIItems">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBUINavigationItem" id="157825447">
